--- a/rs_src/xv6/.cargo/riscv64gc-unknown-none-elf.json
+++ b/rs_src/xv6/.cargo/riscv64gc-unknown-none-elf.json
@@ -6,7 +6,7 @@
   "eh-frame-header": false,
   "emit-debug-gdb-scripts": false,
   "features": "+m,+a,+f,+d,+c",
-  "is-builtin": true,
+  "is-builtin": false,
   "linker": "rust-lld",
   "linker-flavor": "ld.lld",
   "llvm-abiname": "lp64d",
