--- a/rs_src/xv6/.cargo/config.toml
+++ b/rs_src/xv6/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-target = "./.cargo/riscv64gc-unknown-none-elf.json"
+target = "riscv64gc-unknown-none-elf"
 
 [unstable]
 build-std = ["core", "alloc"]
