--- a/rs_src/xv6/xv6-kernel/Cargo.toml
+++ b/rs_src/xv6/xv6-kernel/Cargo.toml
@@ -2,9 +2,11 @@ cargo-features = ["per-package-target"]
 
 [package]
 edition = "2021"
-forced-target = "./targets/riscv64gc-unknown-none-elf.json"
+forced-target = "./targets/kernel/riscv64gc-unknown-none-elf.json"
 name = "xv6-kernel"
 version = "0.1.0"
 
 [dependencies]
+xv6-common = { path = "../xv6-common" }
+
 buddy_system_allocator = "0.9.0"
