--- a/rs_src/xv6/Makefile
+++ b/rs_src/xv6/Makefile
@@ -2,8 +2,16 @@ CARGO_CMD := cargo fmt && cargo clippy -- -D warnings && cargo build --release
 
 .DEFAULT_GOAL := all
 
-xv6-panic:
-	cd xv6-panic && $(CARGO_CMD)
+#BOARD
+BOARD := qemu
+SBI ?= rustsbi
+BOOTLOADER := ../bootloader/$(SBI)-$(BOARD).bin
+
+xv6-user-panic:
+	cd xv6-user-panic && $(CARGO_CMD)
+
+xv6-kernel-panic:
+	cd xv6-kernel-panic && $(CARGO_CMD)
 
 xv6-ulib:
 	cd xv6-ulib && $(CARGO_CMD)
@@ -11,15 +19,17 @@ xv6-ulib:
 xv6-kernel:
 	cd xv6-kernel && $(CARGO_CMD)
 
-.PHONY: all xv6-panic xv6-ulib xv6-kernel clean fmt
-all: xv6-panic xv6-ulib xv6-kernel
+.PHONY: all xv6-user-panic xv6-kernel-panic xv6-ulib xv6-kernel clean fmt
+all: xv6-user-panic xv6-kernel-panic xv6-ulib xv6-kernel
 
 clean:
-	(cd xv6-panic && cargo clean)
+	(cd xv6-user-panic && cargo clean)
+	(cd xv6-kernel-panic && cargo clean)
 	(cd xv6-ulib && cargo clean)
 	(cd xv6-kernel && cargo clean)
 
 fmt:
-	(cd xv6-panic && cargo fmt)
+	(cd xv6-user-panic && cargo fmt)
+	(cd xv6-kernel-panic && cargo fmt)
 	(cd xv6-ulib && cargo fmt)
 	(cd xv6-kernel && cargo fmt)
